Mise en place de l'arborescence et création de l'index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    <img src="images/banner.png" alt="banniere">
+    <header>
+        <img src="images/banner.png" alt="banniere">
+        <nav class="menu_general">
+            <ul class="menu_liste">
+                <li class="enregistrer"><a href="connexion_contact/inscription.html">s'enregistrer</a></li>
+                <li class="se_connecter"><a href="connexion_contact/connexion.html">se connecter</a></li>
+                <li class="nous_contacter"><a href="connexion_contact/contact.html">nous contacter</a></li>
+                <li class="feuille_perso"><a href="lien_inscrit/feuille_perso.html">feuille perso </a></li>
+                <li class="jouer"><a href="lien_inscrit/jouer.html">Jouer</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Actualités</h1>
+        <article class="article_accueil">
+            <img src="images/chevalier1.png" alt="chevalier">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam fugiat libero, odit recusandae
+                provident. Molestiae perferendis, recusandae pariatur illo ipsum consectetur, impedit quibusdam
+                laboriosam earum voluptas officia, eum dolore.</p>
+        </article>
+        <article class="article_accueil">
+            <img src="images/mage1.png" alt="mage">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam fugiat libero, odit recusandae
+                provident. Molestiae perferendis, recusandae pariatur illo ipsum consectetur, impedit quibusdam
+                laboriosam earum voluptas officia, eum dolore.</p>
+        </article>
+        <article class="article_accueil">
+            <img src="images/necro1.png" alt="necromancien">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam fugiat libero, odit recusandae
+                provident. Molestiae perferendis, recusandae pariatur illo ipsum consectetur, impedit quibusdam
+                laboriosam earum voluptas officia, eum dolore.</p>
+        </article>
+    </main>
+    <footer>
+        <nav>
+            <ul class="menu_footer">
+                <li class="descriptif"><a href="footer/descriptif.html">descriptif du jeu</a></li>
+                <li class="CGU"><a href="footer/CGU.html">CGU</a></li>
+                <li class="CGV"><a href="footer/CGV.html">CGV</a></li>
+                <li class="mentions_legales"><a href="footer/mentions_legales.html">mentions_legales </a></li>
+                <li class="RGPD"><a href="footer/RGPD.html">RGPD</a></li>
+                <li class="licence"><a href="footer/licence.html">licence</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
 </html>
