ajout des mentions légales et du bandeau RGPD

--- a/footer/CGU.html
+++ b/footer/CGU.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conditions Générales d’Utilisation – Héroclic</title>
+    <script src="../coucookies/cookies-banner.js"></script>
 </head>
+
 <body>
-    
+
+    <h1>Conditions Générales d’Utilisation – Héroclic</h1>
+
+    <h2>1. Présentation du site</h2>
+    <p>Héroclic est une plateforme d’histoires interactives permettant aux utilisateurs de vivre des récits immersifs et
+        personnalisés. Le site est édité par [Nom de l’éditeur], basé à [adresse].</p>
+
+    <h2>2. Objet des CGU</h2>
+    <p>Les présentes CGU définissent les modalités d’accès, d’utilisation et de responsabilité liées au site Héroclic.
+        En accédant au site, l’utilisateur accepte sans réserve ces conditions.</p>
+
+    <h2>3. Accès au service</h2>
+    <ul>
+        <li>Le site est accessible gratuitement à tout utilisateur disposant d’une connexion Internet.</li>
+        <li>Certaines fonctionnalités nécessitent la création d’un compte utilisateur.</li>
+        <li>Héroclic peut suspendre ou limiter l’accès pour maintenance ou mise à jour.</li>
+    </ul>
+
+    <h2>4. Fonctionnalités proposées</h2>
+    <ul>
+        <li>Lecture et interaction avec des récits narratifs</li>
+        <li>Sauvegarde de la progression via un compte personnel</li>
+        <li>Participation à des choix influençant le déroulement des histoires</li>
+    </ul>
+
+    <h2>5. Propriété intellectuelle</h2>
+    <p>Les contenus narratifs, visuels et sonores sont protégés par le droit d’auteur. Toute reproduction ou diffusion
+        non autorisée est interdite. Le code source est publié sous licence MIT (voir section 10).</p>
+
+    <h2>6. Comportement des utilisateurs</h2>
+    <p>L’utilisateur s’engage à respecter les règles de bonne conduite et à ne pas perturber le bon fonctionnement du
+        site.</p>
+
+    <h2>7. Responsabilité</h2>
+    <p>Héroclic ne peut être tenu responsable des dommages liés à l’utilisation du site. L’utilisateur est responsable
+        de la sécurité de son compte et de ses choix narratifs.</p>
+
+    <h2>8. Données personnelles</h2>
+    <p>Les données collectées sont utilisées uniquement pour améliorer l’expérience utilisateur. Aucune donnée n’est
+        vendue à des tiers. Voir notre <a href="https://privacy.microsoft.com/fr-fr/privacystatement">Politique de
+            confidentialité</a>.</p>
+
+    <h2>9. Modifications des CGU</h2>
+    <p>Héroclic se réserve le droit de modifier les CGU à tout moment. Les utilisateurs seront informés via le site ou
+        par email.</p>
+
+    <h2>10. Licence MIT</h2>
+    <p>
+        Permission is hereby granted, free of charge, to any person obtaining a copy
+        of this software and associated documentation files (the “Software”), to deal
+        in the Software without restriction, including without limitation the rights
+        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+        copies of the Software, and to permit persons to whom the Software is
+        furnished to do so, subject to the following conditions:
+
+        The above copyright notice and this permission notice shall be included in all
+        copies or substantial portions of the Software.
+
+        THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+    </p>
+
+    <h2>11. Droit applicable</h2>
+    <p>Les présentes CGU sont régies par le droit français. En cas de litige, les tribunaux compétents seront ceux du
+        ressort du siège social de l’éditeur.</p>
+
 </body>
+
 </html>
