--- a/footer/CGV.html
+++ b/footer/CGV.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Conditions Générales de Vente – Héroclic Premium</title>
+  <script src="../coucookies/cookies-banner.js"></script>
 </head>
 <body>
-    
+
+  <h1>Conditions Générales de Vente – Abonnement Premium Héroclic</h1>
+
+  <h2>1. Objet</h2>
+  <p>Les présentes Conditions Générales de Vente (CGV) régissent les modalités d’achat, d’accès et d’utilisation de l’abonnement Premium proposé par le site Héroclic.</p>
+
+  <h2>2. Description de l’abonnement Premium</h2>
+  <p>L’abonnement Premium donne accès aux fonctionnalités suivantes :</p>
+  <ul>
+    <li>Candidature au poste de modérateur</li>
+    <li>Notation des commentaires publiés par les autres utilisateurs</li>
+    <li>Proposition de sa propre fiction interactive</li>
+    <li>Notation des fictions proposées par la communauté</li>
+  </ul>
+
+  <h2>3. Tarifs et paiement</h2>
+  <p>Le tarif de l’abonnement Premium est de <strong>4 euros par mois</strong>, toutes taxes comprises.</p>
+  <ul>
+    <li>Le paiement s’effectue en ligne via les moyens sécurisés proposés sur le site.</li>
+    <li>L’abonnement est valable pour une durée mensuelle, renouvelable automatiquement sauf résiliation.</li>
+    <li>Aucun remboursement ne pourra être exigé en cas de résiliation anticipée, sauf cas prévu par la loi.</li>
+  </ul>
+
+  <h2>4. Activation et durée</h2>
+  <p>L’abonnement est activé dès validation du paiement et reste actif pour une durée de 30 jours. Il est renouvelé automatiquement à chaque échéance, sauf résiliation par l’utilisateur.</p>
+
+  <h2>5. Résiliation</h2>
+  <p>L’utilisateur peut résilier son abonnement à tout moment depuis son espace personnel. La résiliation prend effet à la fin de la période en cours.</p>
+  <p>Héroclic se réserve le droit de suspendre ou résilier un abonnement en cas de non-respect des CGU ou comportement abusif.</p>
+
+  <h2>6. Responsabilités</h2>
+  <ul>
+    <li>Héroclic ne garantit pas l’acceptation automatique des candidatures au poste de modérateur.</li>
+    <li>Les contenus proposés par les utilisateurs restent sous leur responsabilité.</li>
+    <li>Héroclic se réserve le droit de modérer ou retirer tout contenu jugé inapproprié.</li>
+  </ul>
+
+  <h2>7. Propriété intellectuelle</h2>
+  <p>Les fictions proposées par les utilisateurs restent leur propriété, sauf mention contraire. En publiant une fiction, l’utilisateur autorise Héroclic à l’afficher sur le site et à la soumettre à la notation communautaire.</p>
+
+  <h2>8. Données personnelles</h2>
+  <p>Les données liées à l’abonnement sont traitées conformément à notre <a href="https://privacy.microsoft.com/fr-fr/privacystatement">Politique de confidentialité</a>. Aucune donnée bancaire n’est conservée par Héroclic.</p>
+
+  <h2>9. Droit applicable</h2>
+  <p>Les présentes CGV sont régies par le droit français. En cas de litige, les tribunaux compétents seront ceux du ressort du siège social de l’éditeur du site.</p>
+
 </body>
-</html>
