--- a/footer/RGPD.html
+++ b/footer/RGPD.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Politique de confidentialité – Héroclic</title>
 </head>
+
 <body>
-    
+
+    <h1>Politique de confidentialité – Héroclic</h1>
+
+    <h2>1. Introduction</h2>
+    <p>Le site Héroclic s’engage à respecter la vie privée de ses utilisateurs et à protéger leurs données personnelles
+        conformément au Règlement Général sur la Protection des Données (RGPD).</p>
+
+    <h2>2. Données collectées</h2>
+    <p>Les données collectées sur le site peuvent inclure :</p>
+    <ul>
+        <li>Adresse email</li>
+        <li>Pseudonyme</li>
+        <li>Préférences de lecture</li>
+        <li>Commentaires et notes</li>
+        <li>Fictions proposées par les utilisateurs</li>
+    </ul>
+    <p>Aucune donnée bancaire n’est collectée ou conservée par Héroclic.</p>
+
+    <h2>3. Finalité du traitement</h2>
+    <p>Les données sont utilisées uniquement pour :</p>
+    <ul>
+        <li>Permettre l’accès aux fonctionnalités du site</li>
+        <li>Gérer les comptes utilisateurs et les abonnements Premium</li>
+        <li>Personnaliser l’expérience narrative</li>
+        <li>Assurer la modération et la sécurité de la plateforme</li>
+    </ul>
+
+    <h2>4. Stockage des données</h2>
+    <p>Toutes les données sont stockées dans une base de données sécurisée. Aucune donnée n’est vendue, cédée ou
+        partagée à des tiers.</p>
+
+    <h2>5. Durée de conservation</h2>
+    <p>Les données sont conservées pendant la durée de l’inscription de l’utilisateur. Elles peuvent être supprimées sur
+        demande ou automatiquement après désactivation du compte.</p>
+
+    <h2>6. Droits des utilisateurs</h2>
+    <p>Conformément au RGPD, chaque utilisateur dispose des droits suivants :</p>
+    <ul>
+        <li>Droit d’accès à ses données</li>
+        <li>Droit de rectification</li>
+        <li>Droit à l’effacement (« droit à l’oubli »)</li>
+        <li>Droit à la portabilité</li>
+        <li>Droit d’opposition au traitement</li>
+    </ul>
+    <p>Pour exercer ces droits, vous pouvez contacter le responsable du traitement à l’adresse suivante : <a
+            href="mailto:balnelius19@gmail.com">balnelius19@gmail.com</a></p>
+
+    <h2>7. Sécurité</h2>
+    <p>Des mesures techniques et organisationnelles sont mises en place pour protéger les données contre tout accès non
+        autorisé, perte ou altération.</p>
+    <h2>8. Cookies</h2>
+    <p>Le site Héroclic utilise des cookies pour :</p>
+    <ul>
+        <li>Mesurer l’audience et les performances du site</li>
+        <li>Améliorer l’expérience utilisateur</li>
+        <li>Afficher des contenus multimédias (ex. : vidéos YouTube)</li>
+    </ul>
+    <p>Certains cookies sont strictement nécessaires au fonctionnement du site et ne requièrent pas de consentement. Les
+        autres cookies ne seront déposés qu’avec votre accord.</p>
+    <p>Vous pouvez à tout moment accepter, refuser ou modifier vos préférences en matière de cookies via le bandeau
+        prévu à cet effet ou en configurant votre navigateur.</p>
+    <p>Les cookies sont conservés pour une durée maximale de 13 mois.</p>
+
+
+    <h2>9. Conditions de modération</h2>
+    <p>Les utilisateurs sont libres de publier des commentaires et des fictions, à condition de respecter la législation
+        française en vigueur. Sont notamment interdits :</p>
+    <ul>
+        <li>Les propos haineux, discriminatoires ou violents</li>
+        <li>Les contenus illégaux ou incitant à des pratiques interdites</li>
+        <li>L’usurpation d’identité ou la diffusion de données personnelles d’autrui</li>
+    </ul>
+    <p>Héroclic se réserve le droit de supprimer tout contenu ne respectant pas ces règles et de suspendre les comptes
+        concernés.</p>
+
+    <h2>10. Réclamation</h2>
+    <p>En cas de litige ou de question relative à vos données, vous pouvez adresser une réclamation à la CNIL
+        (Commission Nationale de l’Informatique et des Libertés) : <a href="https://www.cnil.fr">www.cnil.fr</a></p>
+
 </body>
+
 </html>
