--- a/footer/licence.html
+++ b/footer/licence.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Licence MIT – Héroclic</title>
+    <script src="../coucookies/cookies-banner.js"></script>
 </head>
+
 <body>
-    
+
+    <h1>Licence MIT – Application au site Héroclic</h1>
+
+    <p>Copyright © 2025, Héroclic</p>
+
+    <p>Par la présente, la permission est accordée gratuitement à toute personne obtenant une copie du code source de ce
+        site web et des fichiers de documentation associés (le « Logiciel »), d’utiliser le Logiciel sans restriction, y
+        compris mais sans s’y limiter aux droits d’utiliser, copier, modifier, fusionner, publier, distribuer,
+        sous-licencier et/ou vendre des copies du Logiciel, et de permettre aux personnes à qui le Logiciel est fourni
+        de le faire, sous réserve des conditions suivantes :</p>
+
+    <p>La notice de copyright ci-dessus et la présente notice de permission doivent être incluses dans toutes les copies
+        ou parties substantielles du Logiciel.</p>
+
+    <p>LE LOGICIEL EST FOURNI « TEL QUEL », SANS GARANTIE D’AUCUNE SORTE, EXPRESSE OU IMPLICITE, Y COMPRIS MAIS SANS S’Y
+        LIMITER AUX GARANTIES DE QUALITÉ MARCHANDE, D’ADÉQUATION À UN USAGE PARTICULIER ET DE NON-VIOLATION. EN AUCUN
+        CAS LES AUTEURS OU LES DÉTENTEURS DU COPYRIGHT NE POURRONT ÊTRE TENUS RESPONSABLES DE TOUTE RÉCLAMATION, DOMMAGE
+        OU AUTRE RESPONSABILITÉ, QUE CE SOIT DANS UNE ACTION CONTRACTUELLE, DÉLICTUELLE OU AUTRE, DÉCOULANT DE, HORS DE
+        OU EN RELATION AVEC LE LOGICIEL OU L’UTILISATION OU D’AUTRES TRAITEMENTS DU LOGICIEL.</p>
+
+    <p><em>Note : Cette licence s’applique uniquement au code source du site Héroclic. Les contenus narratifs,
+            illustrations, musiques et textes originaux sont soumis à des droits d’auteur distincts et ne sont pas
+            couverts par la licence MIT.</em></p>
+
 </body>
+
 </html>
