--- a/footer/mentions_legales.html
+++ b/footer/mentions_legales.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mentions légales – Héroclic</title>
+    <script src="../coucookies/cookies-banner.js"></script>
 </head>
+
 <body>
-    
+
+    <h1>Mentions légales – Héroclic</h1>
+
+    <h2>1. Éditeur du site</h2>
+    <p>Ce site est édité par José Rosso, créateur indépendant.<br>
+        Adresse :"adresse disponible sur demande"<br>
+        Email : balnelius19@gmail.com</p>
+
+    <h2>2. Hébergement</h2>
+    <p>Le site Héroclic est hébergé par :</p>
+    <p>
+        LWS (Ligne Web Services)<br>
+        10, rue Penthièvre<br>
+        75008 Paris, France<br>
+        Téléphone : +33 (0)1 77 62 30 03<br>
+        Site web : <a href="https://www.lws.fr" target="_blank">https://www.lws.fr</a>
+    </p>
+
+
+    <h2>3. Propriété intellectuelle</h2>
+    <p>Le contenu du site Héroclic (textes, images, scénarios, interface) est protégé par le droit d’auteur.<br>
+        Le code source du site est distribué sous <strong>licence MIT</strong> (voir la page dédiée).</p>
+
+    <h2>4. Responsabilité</h2>
+    <p>L’éditeur ne peut être tenu responsable des erreurs ou interruptions du service. Les utilisateurs sont
+        responsables de leurs propres contenus (commentaires, fictions, notes).</p>
+
+    <h2>5. Données personnelles</h2>
+    <p>Ce site peut collecter des données personnelles dans le cadre de l’inscription ou de l’abonnement Premium. Ces
+        données sont traitées conformément à la <a href="https://privacy.microsoft.com/fr-fr/privacystatement">politique
+            de confidentialité</a>.</p>
+
+    <h2>6. Cookies</h2>
+    <p>Le site peut utiliser des cookies pour améliorer l’expérience utilisateur. En naviguant sur le site, vous
+        acceptez leur utilisation.</p>
+
+    <h2>7. Contact</h2>
+    <p>Pour toute question ou signalement, vous pouvez contacter l’éditeur à l’adresse suivante : balnelius19@gmail.com
+    </p>
+
 </body>
+
 </html>
