--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="jouer"><a href="lien_inscrit/jouer.html">Jouer</a></li>
             </ul>
         </nav>
+        <script src="coucookies/cookies-banner.js"></script>
     </header>
     <main>
         <h1>Actualités</h1>
