--- a/footer/descriptif.html
+++ b/footer/descriptif.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>descriptif</title>
     <script src="../coucookies/cookies-banner.js"></script>
 </head>
+
 <body>
-    
+    <h1 class="titre_principal">Heroclic adventure c'est quoi?</h1>
+    <h2 class="sous_titre">Description</h2>
+    <p>Ce site est un site inspiré des "livres dont vous êtes le héros". </p>
+    <p>Ainsi lors de votre inscription, vous créez un personnage qui vous servira a jouer </p>
+    <p>Vous choisissez ses statistiques et l'enregistrez, une fois l'enregistrement effectué, vous choisissez l'histoire
+        que vous voulez jouer et cliquez dessus</p>
+    <p> dès que cela est fait du texte apparaitra à l'écran , vous devrez alors faire des choix.</p>
+    <p>les choix auront des conséquences sur le personnage.</p>
+    <h2 class="sous_titre">Description</h2>
+    <p>Votre objectif sera d'arriver au bout de l'histoire pour gagner de l'expérience , l'xp sera alors converti en
+        point bonus au hasard et permettra de monter de niveau</p>
+    <h2 class="sous_titre">Fonctionnalités à venir</h2>
+    <p>il est prévu d'ajouter des quêtes secondaires, des objets à collectionner, et des interactions entre
+        personnages pour enrichir l'expérience de jeu.</p>
+    <p>Un système de sauvegarde avancé permettra de reprendre l'aventure à tout moment, et des événements spéciaux
+        offriront des récompenses uniques.</p>
+    <p> il sera peut etre possible d'accéder a un classement des persos</p>
 </body>
 </html>
