--- a/connexion_contact/contact.html
+++ b/connexion_contact/contact.html
@@ -5,8 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../coucookies/cookies-banner.js"></script>
+      <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      background-color: #f2f2f2;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #zone_contact {
+      width: 100%;
+      max-width: 500px;
+      padding: 20px;
+    }
+
+    #formulaire_contact {
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+    }
+
+    .titre_formulaire {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 1.5em;
+    }
+
+    .champ_formulaire {
+      margin-bottom: 15px;
+    }
+
+    .champ_formulaire label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    .champ_formulaire input,
+    .champ_formulaire textarea {
+      width: 100%;
+      padding: 8px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1em;
+    }
+
+    #bouton_envoyer {
+      width: 100%;
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      font-weight: bold;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    #bouton_envoyer:hover {
+      background-color: #45a049;
+    }
+  </style>
+</head>
 </head>
 <body>
-    
+
+  <main id="zone_contact">
+    <form id="formulaire_contact" method="POST" action="envoyer_message.php">
+      <h2 class="titre_formulaire">contactez_nous</h2>
+
+      <div class="champ_formulaire">
+        <label for="nom">nom :</label>
+        <input type="text" id="nom" name="nom" required>
+      </div>
+
+      <div class="champ_formulaire">
+        <label for="email">email :</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+
+      <div class="champ_formulaire">
+        <label for="sujet">sujet :</label>
+        <input type="text" id="sujet" name="sujet">
+      </div>
+
+      <div class="champ_formulaire">
+        <label for="message">message :</label>
+        <textarea id="message" name="message" rows="6" required></textarea>
+      </div>
+
+      <button type="submit" id="bouton_envoyer">envoyer</button>
+    </form>
+  </main>
+
+</body>
+</html>
 </body>
 </html>
