--- a/lien_inscrit/jouer.html
+++ b/lien_inscrit/jouer.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../coucookies/cookies-banner.js"></script>
+      <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
+
+    #zone_principale {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    #zone_gauche,
+    #zone_droite {
+      flex: 1;
+    }
+
+    #zone_texte {
+      flex: 3;
+      display: flex;
+      justify-content: center;
+    }
+
+    #texte_jeu {
+      width: 100%;
+      height: 80vh;
+      resize: none;
+      overflow-y: scroll;
+      line-height: 1.4em;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    #zone_image {
+      text-align: center;
+      padding: 10px;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
+
+
 <body>
-    
+
+  <div id="zone_principale">
+    <div id="zone_gauche"></div>
+
+    <div id="zone_texte">
+      <textarea id="texte_jeu" rows="30" placeholder="Votre aventure commence ici..."></textarea>
+    </div>
+
+    <div id="zone_droite"></div>
+  </div>
+
+  <div id="zone_image">
+    <img src="image_du_jeu.jpg" alt="illustration_du_jeu">
+  </div>
+
+</body>
+</html>
+
+
 </body>
 </html>
