--- a/connexion_contact/contact.html
+++ b/connexion_contact/contact.html
@@ -5,73 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../coucookies/cookies-banner.js"></script>
-      <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #f2f2f2;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #zone_contact {
-      width: 100%;
-      max-width: 500px;
-      padding: 20px;
-    }
-
-    #formulaire_contact {
-      background-color: #ffffff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-
-    .titre_formulaire {
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 1.5em;
-    }
-
-    .champ_formulaire {
-      margin-bottom: 15px;
-    }
-
-    .champ_formulaire label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-
-    .champ_formulaire input,
-    .champ_formulaire textarea {
-      width: 100%;
-      padding: 8px;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 1em;
-    }
-
-    #bouton_envoyer {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 1em;
-    }
-
-    #bouton_envoyer:hover {
-      background-color: #45a049;
-    }
-  </style>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 </head>
 <body>
@@ -102,9 +36,8 @@
 
       <button type="submit" id="bouton_envoyer">envoyer</button>
     </form>
+     <a href="../index.html" target="_blank">retour a l'accueil</a>
   </main>
 
-</body>
-</html>
 </body>
 </html>
