--- a/connexion_contact/inscription.html
+++ b/connexion_contact/inscription.html
@@ -5,42 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../coucookies/cookies-banner.js"></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-  <h2>Inscription</h2>
-  <form id="form_inscription">
-    <label for="pseudo">Pseudo :</label>
-    <input type="text" id="pseudo" name="pseudo" required><br><br>
+    <main id="zone_contact">
+    <form id="formulaire_contact" method="POST" action="me-connecter.php">
+      <h2 class="titre_formulaire">inscrivez vous</h2>
 
-    <label for="mot_de_passe">Mot de passe :</label>
-    <input type="password" id="mot_de_passe" name="mot_de_passe" required><br><br>
+      <div class="champ_formulaire">
+        <label for="pseudo">pseudo:</label>
+        <input type="text" id="pseudo" name="pseudo" required>
+      </div>
 
-    <button type="submit">Créer mon personnage</button>
-  </form>
+      <div class="champ_formulaire">
+        <label for="mot_de_passe">mot_de_passe :</label>
+        <input type="text" id="mot_de_passe" name="mot_de_passe" required>
+      </div>
 
-  <script>
-    const form_inscription = document.getElementById('form_inscription');
-
-    form_inscription.addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      const pseudo = document.getElementById('pseudo').value.trim();
-      const mot_de_passe = document.getElementById('mot_de_passe').value;
-
-      // Création du JSON initial
-      const joueur_data = {
-        pseudo: pseudo,
-        mot_de_passe: mot_de_passe,
-        // Les champs suivants seront ajoutés dans feuille_perso.html
-        personnage: {}
-      };
-
-      // Stockage temporaire (localStorage ou sessionStorage selon ton besoin)
-      localStorage.setItem('joueur_data', JSON.stringify(joueur_data));
-
-      // Redirection vers la feuille de création du personnage
-      window.location.href = '../lien_inscrit/feuille_perso.html';
-    });
-  </script>
+      <button type="submit" id="bouton_envoyer">envoyer</button>
+    </form>
+     <a href="../index.html" target="_blank">retour a l'accueil</a>
+  </main>
+<!--"../lien_inscrit/feuille_perso.html"-->
 </body>
 </html>
