--- a/footer/CGU.html
+++ b/footer/CGU.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Conditions Générales d’Utilisation – Héroclic</title>
     <script src="../coucookies/cookies-banner.js"></script>
+    <link rel="stylesheet" type="text/css" href="info.legale.css">
 </head>
 
 <body>
@@ -47,7 +48,7 @@
 
     <h2>8. Données personnelles</h2>
     <p>Les données collectées sont utilisées uniquement pour améliorer l’expérience utilisateur. Aucune donnée n’est
-        vendue à des tiers. Voir notre <a href="https://privacy.microsoft.com/fr-fr/privacystatement">Politique de
+        vendue à des tiers. Voir notre <a href="RGPD.html">Politique de
             confidentialité</a>.</p>
 
     <h2>9. Modifications des CGU</h2>
@@ -74,7 +75,7 @@
     <h2>11. Droit applicable</h2>
     <p>Les présentes CGU sont régies par le droit français. En cas de litige, les tribunaux compétents seront ceux du
         ressort du siège social de l’éditeur.</p>
-
+    <a href="../index.html" target="_blank">retour a l'accueil</a>  
 </body>
 
 </html>
