--- a/footer/CGV.html
+++ b/footer/CGV.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Conditions Générales de Vente – Héroclic Premium</title>
   <script src="../coucookies/cookies-banner.js"></script>
+  <link rel="stylesheet" type="text/css" href="info.legale.css">
 </head>
 <body>
 
@@ -51,5 +52,5 @@
 
   <h2>9. Droit applicable</h2>
   <p>Les présentes CGV sont régies par le droit français. En cas de litige, les tribunaux compétents seront ceux du ressort du siège social de l’éditeur du site.</p>
-
+   <a href="../index.html" target="_blank">retour a l'accueil</a>
 </body>
