--- a/footer/RGPD.html
+++ b/footer/RGPD.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Politique de confidentialité – Héroclic</title>
+    <link rel="stylesheet" type="text/css" href="info.legale.css">
 </head>
 
 <body>
@@ -85,7 +86,7 @@
     <h2>10. Réclamation</h2>
     <p>En cas de litige ou de question relative à vos données, vous pouvez adresser une réclamation à la CNIL
         (Commission Nationale de l’Informatique et des Libertés) : <a href="https://www.cnil.fr">www.cnil.fr</a></p>
-
+         <a href="../index.html" target="_blank">retour a l'accueil</a>
 </body>
 
 </html>
