--- a/footer/descriptif.html
+++ b/footer/descriptif.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>descriptif</title>
     <script src="../coucookies/cookies-banner.js"></script>
+    <link rel="stylesheet" type="text/css" href="info.legale.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         que vous voulez jouer et cliquez dessus</p>
     <p> dès que cela est fait du texte apparaitra à l'écran , vous devrez alors faire des choix.</p>
     <p>les choix auront des conséquences sur le personnage.</p>
-    <h2 class="sous_titre">Description</h2>
+    <h2 class="sous_titre">objectif</h2>
     <p>Votre objectif sera d'arriver au bout de l'histoire pour gagner de l'expérience , l'xp sera alors converti en
         point bonus au hasard et permettra de monter de niveau</p>
     <h2 class="sous_titre">Fonctionnalités à venir</h2>
@@ -26,5 +27,6 @@
     <p>Un système de sauvegarde avancé permettra de reprendre l'aventure à tout moment, et des événements spéciaux
         offriront des récompenses uniques.</p>
     <p> il sera peut etre possible d'accéder a un classement des persos</p>
+     <a href="../index.html" target="_blank">retour a l'accueil</a>
 </body>
 </html>
