--- a/footer/mentions_legales.html
+++ b/footer/mentions_legales.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Mentions légales – Héroclic</title>
     <script src="../coucookies/cookies-banner.js"></script>
+    <link rel="stylesheet" type="text/css" href="info.legale.css">
 </head>
 
 <body>
@@ -47,7 +48,7 @@
     <h2>7. Contact</h2>
     <p>Pour toute question ou signalement, vous pouvez contacter l’éditeur à l’adresse suivante : balnelius19@gmail.com
     </p>
-
+     <a href="../index.html" target="_blank">retour a l'accueil</a>
 </body>
 
 </html>
