--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="styleaccueil.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <img src="images/banner.png" alt="banniere">
+        <img src="images/banner.png" alt="banniere" class="banniere">
         <nav class="menu_general">
             <ul class="menu_liste">
                 <li class="enregistrer"><a href="connexion_contact/inscription.html">s'enregistrer</a></li>
@@ -22,25 +22,38 @@
         </nav>
         <script src="coucookies/cookies-banner.js"></script>
     </header>
-    <main>
-        <h1>Actualités</h1>
+    <main class="articles_accueil">
+        <h1 class="titre_1_Accueil">Actualités</h1>
         <article class="article_accueil">
-            <img src="images/chevalier1.png" alt="chevalier">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam fugiat libero, odit recusandae
-                provident. Molestiae perferendis, recusandae pariatur illo ipsum consectetur, impedit quibusdam
-                laboriosam earum voluptas officia, eum dolore.</p>
+            <img src="images/chevalier1.png" alt="chevalier" class="image70">
+            <p>ajout du guerrier :
+                Armé d’une épée massive et d’un bouclier gravé, le guerrier est le pilier de toute escouade. Il encaisse
+                les coups, protège ses alliés et charge sans peur dans la mêlée. Sa force brute et sa discipline
+                martiale font de lui un adversaire redoutable en combat rapproché. <br>
+
+                Forces : grande résistance, dégâts physiques, présence intimidante Faiblesses : mobilité réduite, peu
+                d’attaques à distance</p>
         </article>
         <article class="article_accueil">
-            <img src="images/mage1.png" alt="mage">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam fugiat libero, odit recusandae
-                provident. Molestiae perferendis, recusandae pariatur illo ipsum consectetur, impedit quibusdam
-                laboriosam earum voluptas officia, eum dolore.</p>
+            <img src="images/mage1.png" alt="mage" class="image70">
+            <p> ajout du mage :
+                Drapé dans une robe étoilée, le mage canalise les forces élémentaires avec une précision redoutable. Son
+                savoir ancestral lui permet de manipuler le feu, la glace et l’électricité pour anéantir ses ennemis à
+                distance. Fragile physiquement, il compense par une puissance magique dévastatrice et une capacité à
+                contrôler le champ de bataille.<br>
+
+                Forces : dégâts à distance, sorts de zone, contrôle magique Faiblesses : faible défense, vulnérable au
+                corps-à-corps
+            </p>
         </article>
         <article class="article_accueil">
-            <img src="images/necro1.png" alt="necromancien">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam fugiat libero, odit recusandae
-                provident. Molestiae perferendis, recusandae pariatur illo ipsum consectetur, impedit quibusdam
-                laboriosam earum voluptas officia, eum dolore.</p>
+            <img src="images/necro1.png" alt="necromancien" class="image70">
+            <p>Ajout du nécromancien : Entouré d’un halo sombre, le nécromancien invoque les morts pour servir sa
+                volonté. Ses incantations obscures drainent la vie de ses ennemis et corrompent leur esprit. Il manipule
+                la frontière entre la vie et la mort, semant la terreur sur son passage. <br>
+
+                Forces : invocations, drain de vie, affaiblissement des ennemis Faiblesses : dépendance à ses
+                serviteurs, faible en duel direct</p>
         </article>
     </main>
     <footer>
