--- a/footer/licence.html
+++ b/footer/licence.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Licence MIT – Héroclic</title>
     <script src="../coucookies/cookies-banner.js"></script>
+    <link rel="stylesheet" type="text/css" href="info.legale.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
     <p><em>Note : Cette licence s’applique uniquement au code source du site Héroclic. Les contenus narratifs,
             illustrations, musiques et textes originaux sont soumis à des droits d’auteur distincts et ne sont pas
             couverts par la licence MIT.</em></p>
-
+     <a href="../index.html" target="_blank">retour a l'accueil</a>
 </body>
 
 </html>
